Added and fixed imbalnce controllers
