# controller/dataController.go
@@ -273,16 +273,55 @@ func GetCalculatedImbalanceDetails(c *gin.Context) {
 	c.JSON(http.StatusOK, data)
 }
 
+// PrepareImbalanceCalculation
+// @Tags Calculations
+// @Accept json
+// @Produce json
+// @Param date query string true "Дата расчета"
+// @Success 200 {object} string
+// @Router /api/PrepareImbalanceCalculation [post]
+func PrepareImbalanceCalculation(c *gin.Context) {
+	date := c.Query("date")
+	permissions := []string{conf.GlobalConfig.Permissions.Calculate}
+
+	isValid, _ := isValidDate(c, date)
+	if !isValid {
+		return
+	}
+
+	if !checkPermissions(c, permissions) {
+		return
+	}
+
+	db, err := connectToDatabase()
+	if err != nil {
+		c.JSON(http.StatusBadRequest, err.Error())
+		return
+	}
+
+	username := authorization.ReturnDomainUser()
+	batch, err := db.PrepareImbalanceCalculation(date, username)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	db.Close()
+	c.JSON(http.StatusOK, batch)
+}
+
 // CalculateImbalance
 // @Tags Calculations
 // @Accept json
 // @Produce json
 // @Param date query string true "Дата получения параметров"
+// @Param batch query string true "Id batch расчета"
 // @Param data body []models.SetImbalanceFlag true "Данные расчета небаланс"
 // @Success 200
 // @Router /api/CalculateImbalance [post]
 func CalculateImbalance(c *gin.Context) {
 	date := c.Query("date")
+	batch := c.Query("batch")
 	permissions := []string{conf.GlobalConfig.Permissions.Calculate}
 
 	isValid, _ := isValidDate(c, date)
@@ -307,7 +346,7 @@ func CalculateImbalance(c *gin.Context) {
 	}
 
 	username := authorization.ReturnDomainUser()
-	err = db.CalculateImbalance(date, username, string(jsonData))
+	err = db.CalculateImbalance(date, username, string(jsonData), batch)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, err.Error())
 		return
@@ -317,16 +356,17 @@ func CalculateImbalance(c *gin.Context) {
 	c.JSON(http.StatusOK, "Calculation succsessful")
 }
 
-// SetAdjustment
+// CancelImbalanceCalculation
 // @Tags Calculations
 // @Accept json
 // @Produce json
 // @Param date query string true "Дата получения параметров"
-// @Param data body []models.SetAdjustment true "Данные корректировки"
+// @Param batch query string true "Id batch расчета"
 // @Success 200
-// @Router /api/SetAdjustment [post]
-func SetAdjustment(c *gin.Context) {
+// @Router /api/CancelImbalanceCalculation [post]
+func CancelImbalanceCalculation(c *gin.Context) {
 	date := c.Query("date")
+	batch := c.Query("batch")
 	permissions := []string{conf.GlobalConfig.Permissions.Calculate}
 
 	isValid, _ := isValidDate(c, date)
@@ -344,20 +384,15 @@ func SetAdjustment(c *gin.Context) {
 		return
 	}
 
-	jsonData, err := io.ReadAll(c.Request.Body)
+	username := authorization.ReturnDomainUser()
+	err = db.CancelImbalanceCalculation(date, username, batch)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, err.Error())
-		return
-	}
-
-	err = db.SetAdjustment(date, string(jsonData))
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, err.Error())
+		c.JSON(http.StatusBadRequest, err.Error())
 		return
 	}
 
 	db.Close()
-	c.JSON(http.StatusOK, "Calculation succsessful")
+	c.JSON(http.StatusOK, "Success")
 }
 
 // GetNodesList
